MOB-4478: add rating

--- a/sdk/src/main/res/values-night/colors.xml
+++ b/sdk/src/main/res/values-night/colors.xml
@@ -15,6 +15,6 @@
     <color name="jivo_sdk_surface_outline">#1FFFFFFF</color>
     <color name="jivo_sdk_surface_comment">#41403C</color>
 
-    <color name="jivo_sdk_chat_background">#121212</color>
+    <color name="jivo_sdk_chat_background">#1E1E1E</color>
 
 </resources>
