--- a/sdk/src/main/res/layout/fragment_jivo_chat.xml
+++ b/sdk/src/main/res/layout/fragment_jivo_chat.xml
@@ -131,13 +131,10 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/connectionState"
+            style="@style/Widget.JivoSDK.CardView.ConnectionState"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
             android:visibility="gone"
-            app:cardBackgroundColor="?colorSurface"
-            app:cardCornerRadius="36dp"
-            app:cardElevation="1dp"
             app:layout_constraintBottom_toTopOf="@id/controls"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -145,46 +142,43 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="8dp">
-
-                <ProgressBar
-                    android:id="@+id/connectingView"
-                    style="?android:progressBarStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:visibility="visible" />
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/connectionStateName"
+                    style="@style/Widget.JivoSDK.TextView.ConnectionState.Name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:textColor="@color/jivo_sdk_color_on_surface_87"
-                    android:textSize="12sp"
-                    app:layout_constraintStart_toEndOf="@id/connectingView"
+                    app:layout_constraintBottom_toTopOf="@+id/connectionRetry"
+                    app:layout_constraintEnd_toStartOf="@+id/connectingView"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="@string/connection_state_connecting" />
 
                 <TextView
                     android:id="@+id/connectionRetry"
+                    style="@style/Widget.JivoSDK.TextView.Connection.Retry"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:background="?selectableItemBackgroundBorderless"
                     android:onClick="@{() -> viewModel.retry()}"
                     android:text="@string/connection_state_retry"
-                    android:textColor="?colorSecondary"
-                    android:textSize="12sp"
                     android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/connectingView"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/connectionStateName"
+                    tools:visibility="visible" />
+
+                <com.google.android.material.progressindicator.CircularProgressIndicator
+                    android:id="@+id/connectingView"
+                    style="@style/Widget.JivoSDK.CircularProgressIndicator.Connection"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/connectionStateName"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:visibility="visible" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
