--- a/sdk/src/main/res/values/styles.xml
+++ b/sdk/src/main/res/values/styles.xml
@@ -469,22 +469,27 @@
 
     <!-- Connection state card view appearance -->
     <style name="Widget.JivoSDK.CardView.ConnectionState" parent="CardView">
-        <item name="contentPaddingLeft">16dp</item>
-        <item name="contentPaddingRight">16dp</item>
+        <item name="contentPaddingLeft">8dp</item>
+        <item name="contentPaddingRight">8dp</item>
         <item name="contentPaddingBottom">8dp</item>
         <item name="contentPaddingTop">8dp</item>
         <item name="cardCornerRadius">10dp</item>
         <item name="cardElevation">5dp</item>
         <item name="cardBackgroundColor">?colorSurface</item>
         <item name="android:layout_marginBottom">12dp</item>
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="layout_constrainedWidth">true</item>
     </style>
 
     <!-- Connection state name appearance  -->
     <style name="Widget.JivoSDK.TextView.ConnectionState.Name" parent="">
         <item name="android:textColor">@color/jivo_sdk_color_on_surface_87</item>
         <item name="android:textSize">12sp</item>
-        <item name="android:layout_marginEnd">8dp</item>
         <item name="android:textAppearance">@style/TextAppearance.JivoSDK.Caption</item>
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:gravity">center_horizontal</item>
     </style>
 
     <!-- Connection state retry appearance  -->
