--- a/sdk/src/main/res/layout/dg_item_client_image.xml
+++ b/sdk/src/main/res/layout/dg_item_client_image.xml
@@ -22,15 +22,13 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp">
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardView"
-            style="@style/Widget.JivoSDK.TextView.ImageBubble.Background"
+            style="@style/Widget.JivoSDK.ImageBubble"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="center"
             android:layout_marginStart="80dp"
-            app:cardCornerRadius="12dp"
-            app:cardElevation="0dp"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -124,7 +122,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
