--- a/sdk/src/main/res/xml/jivosdk_file_paths.xml
+++ b/sdk/src/main/res/xml/jivosdk_file_paths.xml
@@ -3,4 +3,5 @@
     <files-path
         name="notifications"
         path="notifications/" />
+    <external-path name="external_files" path="." />
 </paths>
