MOB-5173: add logging system

--- a/sdk/src/main/res/menu/menu_chat_input_actions.xml
+++ b/sdk/src/main/res/menu/menu_chat_input_actions.xml
@@ -8,4 +8,8 @@
         android:id="@+id/action_file"
         android:title="@string/Menu.Action.File" />
 
+    <item
+        android:id="@+id/action_send_logs"
+        android:title="@string/JV_SpecialMenu_Popup_ExportJournal" />
+
 </menu>
