--- a/sdk/src/main/res/layout/fragment_jivo_chat.xml
+++ b/sdk/src/main/res/layout/fragment_jivo_chat.xml
@@ -72,6 +72,7 @@
                 style="@style/Widget.JivoSDK.Toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onLongClickListener="@{() -> fragment.sendLogs()}"
                 app:contentInsetStart="0dp"
                 app:contentInsetStartWithNavigation="0dp"
                 app:inflateToolbar="@{viewModel.agents}">
