--- a/sdk/src/main/res/layout/dg_item_uploading_file.xml
+++ b/sdk/src/main/res/layout/dg_item_uploading_file.xml
@@ -48,6 +48,7 @@
 
             <ProgressBar
                 android:id="@+id/progressBar"
+                style="@style/Widget.JivoSDK.ProgressBarStyle"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginVertical="16dp"
